<resources>
    <string name="app_name">Login2</string>
    <string name="login_id">id</string>
    <string name="login_pw">password</string>
    <string name="login_btn">Login</string>
    <string name="login_register"><u>Sign up</u></string>
    <string name="login_register_q">Not registered?</string>
    <string name="register_name">name</string>
    <string name="register_age">age</string>
    <string name="register_welcome"><b>Welcome!\nPlease fill in the boxes below to register.</b></string>
</resources>
