<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="346dp"
        android:layout_height="585dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/textView10"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/register_welcome"
            android:textColor="#000000"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/registerIdText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/login_id" />

        <EditText
            android:id="@+id/registerIdEdit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPersonName" />

        <TextView
            android:id="@+id/registerPwText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/login_pw" />

        <EditText
            android:id="@+id/registerPwEdit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPassword" />

        <TextView
            android:id="@+id/registerNameText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/register_name" />

        <EditText
            android:id="@+id/registerNameEdit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPersonName" />

        <TextView
            android:id="@+id/registerAgeText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/register_age" />

        <EditText
            android:id="@+id/registerAgeEdit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPersonName" />

        <Button
            android:id="@+id/registerSubmitButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="SUBMIT" />

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>